# Nexus-Agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.nexus/: config.yaml.example
nexus/: __init__.py  app.py  cli.py  config.py
nexus/constraints/: base.py  engine.py  rules.py
nexus/context/: dynamic.py  manager.py  static.py
nexus/core/: errors.py  pipeline.py  types.py
nexus/feedback/: collector.py  evaluator.py  store.py
nexus/memory/: search.py  session.py  store.py
nexus/providers/: anthropic.py  base.py  ollama.py  openai.py  registry.py
nexus/training/: exporter.py  lora.py  registry.py
